--- a/app/src/main/res/layout/activity_file_explorer.xml
+++ b/app/src/main/res/layout/activity_file_explorer.xml
@@ -27,7 +27,6 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/reset"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
@@ -47,8 +46,7 @@
                 android:text="Done"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:visibility="gone" />
+                android:textStyle="bold" />
 
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
