--- a/app/src/main/res/layout/fragment_pdf_view.xml
+++ b/app/src/main/res/layout/fragment_pdf_view.xml
@@ -5,10 +5,20 @@
     android:layout_height="match_parent"
     android:background="#51ffa12f">
 
+    <TextView
+        android:id="@+id/mCounting"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold" />
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/linearLayout"
+        android:layout_below="@+id/mCounting"
         android:layout_margin="10dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="5dp">
@@ -19,14 +29,6 @@
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true" />
 
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"
-            android:visibility="gone" />
 
     </android.support.v7.widget.CardView>
 
