--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -6,75 +6,140 @@
     android:layout_height="match_parent">
 
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        app:elevation="4dp"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/my_toolbar"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
-            app:elevation="4dp"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/title_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginStart="10dp"
+                android:layout_weight="1"
                 android:text="AboutUs"
                 android:textColor="#ffffff"
                 android:textSize="22sp"
                 android:textStyle="bold"
                 tools:ignore="RtlHardcoded" />
 
-        </android.support.v7.widget.Toolbar>
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_share" />
+
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
 
     <TextView
         android:id="@+id/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/my_toolbar"
         android:padding="5dp"
         android:textSize="20sp"
-        android:layout_below="@+id/my_toolbar"/>
+        android:textColor="#000"/>
 
-    <ImageView
-        android:id="@+id/share"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:src="@drawable/ic_share"
-        android:layout_below="@+id/version"/>
+    <TextView
+        android:id="@+id/mAboutUsContent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/version"
+        android:padding="10dp"
+        android:text="@string/AboutUs"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/mAboutSteps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mAboutUsContent"
+        android:padding="10dp"
+        android:text="@string/Steps" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mAboutSteps"
+        android:text="How do you rate our App ?"
+        android:textColor="#000"
+        android:layout_marginTop="20dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/mRateOurApp"/>
 
     <RatingBar
         android:id="@+id/rateApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/mRateOurApp"
+        android:layout_centerInParent="true"
         android:numStars="5"
-        android:rating="3.5"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/share"/>
+        android:rating="3.5" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/buy_pro"
-        android:layout_below="@+id/rateApp"
-        android:layout_margin="40dp"
-        android:id="@+id/mBuyVersion"/>
-
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:id="@+id/mBuyVersion"
+        android:layout_marginEnd="50dp"
+        android:layout_marginStart="50dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="20dp"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/rateApp"
+       app:cardBackgroundColor="#2B000000">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Buy Now"
+            android:textColor="#000"
+            android:textSize="17sp"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center"
+            android:textStyle="bold"/>
+
+        <ImageView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rateApp"
+            android:src="@drawable/buy_pro"
+            android:layout_gravity="center"
+            android:layout_marginEnd="35dp"/>
+
+
+    </android.support.v7.widget.CardView>
+
+  <!--  <ImageView
+        android:id="@+id/mBuyVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rateApp"
+        android:src="@drawable/buy_pro" />-->
+
+    <RelativeLayout
         android:id="@+id/close"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimaryDark">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:gravity="center"
             android:text="Close"
-            android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="20sp"
             android:textStyle="bold" />
