--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,17 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?actionBarSize"
         android:background="@color/colorPrimaryDark"
         app:titleTextColor="#ffffff">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
@@ -27,6 +27,7 @@
                 android:visibility="visible" />
 
             <TextView
+                android:id="@+id/mTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -40,9 +41,9 @@
                 android:id="@+id/mReset"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_delete"
                 android:layout_gravity="center"
-                android:layout_marginEnd="20dp" />
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_delete" />
 
         </LinearLayout>
 
