--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,42 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="Choose Action..."
-        android:padding="15dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
         android:id="@+id/chooseAction"
-        android:textColor="#000000"
-        android:layout_marginTop="10dp"/>
-
-    <TextView
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Delete"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
         android:padding="15dp"
-        android:textSize="20sp"
+        android:text="Choose Action..."
         android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/delete"
-        android:layout_marginTop="10dp"/>
-
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="15dp"
+        android:text="Delete"
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
 
     <TextView
+        android:id="@+id/crop"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Crop"
-        android:textSize="20sp"
         android:padding="15dp"
+        android:text="Crop"
         android:textColor="#000000"
-        android:id="@+id/crop" />
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/mSelect"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="Select"
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
 </LinearLayout>
