--- a/app/src/main/res/layout/view_holder.xml
+++ b/app/src/main/res/layout/view_holder.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
+    android:id="@+id/topleft"
     android:layout_height="150dp"
     android:layout_margin="10dp">
 
@@ -8,6 +9,16 @@
         android:id="@+id/spacecraftImg"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:button="@drawable/style_check"
+        android:padding="5dp" />
 
 </android.support.v7.widget.CardView>
 
